2016-06-28  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Support Gspell as an alternative to GtkSpell

	* configure.ac: replace --with-gtkspell with
	--with-spell-checker = (no|gtkspell|gspell) and change the
	AM_CONDITIONAL BUILD_WITH_GTK_SPELL to BUILD_WITH_SPELL_CHECKER.
	* src/Makefile.am: use the new AM_CONDITIONAL.
	* src/balsa-app.c (balsa_app_init): support Gspell.
	* src/balsa-app.h: ditto.
	* src/pref-manager.c (apply_prefs), (set_prefs): ditto.
	* src/save-restore.c (config_global_load), (config_save): ditto.
	* src/sendmsg-window.c (balsa_sendmsg_destroy_handler),
	(create_text_area), (create_lang_menu), (message_postpone),
	(set_locale), (sw_spell_check_change_state), (lang_set_cb),
	(sendmsg_window_new): Gspell has a different API from GtkSpell.

2016-06-25  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Symbolic icon names like pan-down-symbolic now contain hyphens
	and can no longer use underscores.

	* src/balsa-message.c: fix symbolic icon names.

2016-06-25  Peter Bloomfield  <pbloomfield@bellsouth.net>

	As of gtksource version 2.21.?, only <gtksourceview/gtksource.h>
	can be included directly.

	* libbalsa/libbalsa.c: include only gtksource.h.
	* src/balsa-mime-widget-text.c: ditto.
	* src/spell-check.c: ditto.

2016-06-22  Albrecht Dreß

	Fix shrinking message list

	* src/main-window.c (balsa_window_new),
	(balsa_window_fix_paned): set the size of the elements of the
	main window in an idle callback instead of the window creator;
	* src/main-window.h: export the idle callback;
	* src/main.c (real_main): add the idle call.

2016-06-19  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/ab-main.c (libbalsa_dialog_flags): set check_done to a
	non-zero value.

2016-06-19  Albrecht Dreß

	Make Gtk3 dialog header bars configurable
	Basically, a new function libbalsa_dialog_flags() is added to
	libbalsa.c (or simply expanded to 0 for older Gtk versions than
	3.12.0).  When being called for the first time, the function